# RandomWalkOS

./: .gitignore  CMakeLists.txt
client/: client.c  client.h
common/: ipc.c  ipc.h  printer.c  printer.h  protocol.h  randomWalk.c  randomWalk.h  world.c  world.h
server/: server.c  server.h
